...
                ) {
                    Text("Accedi")
                }

                Spacer(modifier = Modifier.height(8.dp))
                TextButton(onClick = onRegister) {
                    Text("Non sei registrato? Registrati adesso")
                }
            }

            // Se lo stato è Loading, mostriamo l'indicatore di caricamento
            if (loginState is AuthUiState.Loading) {
                CircularProgressIndicator(modifier = Modifier.align(Alignment.Center))
...
